--- a/www/app/layout/menu-layout.html
+++ b/www/app/layout/menu-layout.html
@@ -1,4 +1,4 @@
-<ion-side-menus enable-menu-with-back-views="false">
+<ion-side-menus>
     <ion-pane ion-side-menu-content>
         <ion-nav-bar class="bar-balanced">
             <ion-nav-back-button class="button-clear icon ion-ios7-arrow-back"></ion-nav-back-button>
