dialogs in menu

--- a/www/app/layout/menu-layout.html
+++ b/www/app/layout/menu-layout.html
@@ -20,6 +20,7 @@
                 <ion-item nav-clear menu-close ui-sref="app.standings">Standings</ion-item>
                 <ion-item nav-clear menu-close ui-sref="app.locations">Locations</ion-item>
                 <ion-item nav-clear menu-close ui-sref="app.rules">Rules</ion-item>
+                <ion-item nav-clear menu-close ui-sref="app.dialogs">Dialogs</ion-item>
             </ion-list>
     </ion-side-menu>
 </ion-side-menus>
