--- a/www/app/layout/menu-layout.html
+++ b/www/app/layout/menu-layout.html
@@ -21,6 +21,7 @@
                 <ion-item nav-clear menu-close ui-sref="app.locations">Locations</ion-item>
                 <ion-item nav-clear menu-close ui-sref="app.rules">Rules</ion-item>
                 <ion-item nav-clear menu-close ui-sref="app.dialogs">Dialogs</ion-item>
+                <ion-item nav-clear menu-close ui-sref="app.vibration">Vibration</ion-item>
             </ion-list>
     </ion-side-menu>
 </ion-side-menus>
