cordova camera, device info, network status, barcode scanner

--- a/www/app/layout/menu-layout.html
+++ b/www/app/layout/menu-layout.html
@@ -22,6 +22,10 @@
                 <ion-item nav-clear menu-close ui-sref="app.rules">Rules</ion-item>
                 <ion-item nav-clear menu-close ui-sref="app.dialogs">Dialogs</ion-item>
                 <ion-item nav-clear menu-close ui-sref="app.vibration">Vibration</ion-item>
+                <ion-item nav-clear menu-close ui-sref="app.network">Network</ion-item>
+                <ion-item nav-clear menu-close ui-sref="app.device">Device</ion-item>
+                <ion-item nav-clear menu-close ui-sref="app.camera">Camera</ion-item>
+                <ion-item nav-clear menu-close ui-sref="app.barcode">Barcode</ion-item>
             </ion-list>
     </ion-side-menu>
 </ion-side-menus>
